chore: P2 코드베이스 정리 - 미사용 파일 제거, 설정 환경변수화, 예외 처리 정비